# python-rag

./: README.md  compose.yml  pyproject.toml
database/: 1-mooc.sql
src/: PostgresConnection.py  api.py  chat.py  main.py  search.py
src/api/: routes.py
src/db/: connection.py
src/scripts/: create_data.py
src/services/: chat_service.py  search_service.py
src/utils/: config.py
